<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">UMD Finals App</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="drawer_open">Drawer Open</string>
    <string name="drawer_close">Drawer Close</string>
    <string name="action_add_class">Add a class to get final</string>
    <string name="class_name_hint">Class Name, ex "CMSC411"</string>
    <string name="class_section_hint">Section</string>
    <string name="add_class">Search Class</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="add_to_sched">Add to Schedule?</string>
    <string name="cancel">Cancel</string>  

    <!--
        	TWITTER APP/ACCOUNT INFO
		 			CURRENT USER: 	zinglax 
		 			APP NAME:		twads
		 			This should be changed to finals app twitter account
    -->
    <string name="consumer_key">U20eFnLmaS1eAGIVp1PYGQ</string>
    <string name="consumer_secret">uKUKcgbxtzPff4UkKXPjD9okQJ1N5a7DJD434BsEss</string>
    <string name="access_token">23317561-b5CrifbpuOF8M9ZjhYbeWAPpVkCxNZRTW5C6m3oZr</string>
    <string name="access_token_secret">itaVjDEmrYAueoVm3Yu5zx1XXZPiQaL71Q6aSKwfRRM</string>
    <string name="designed_by">Designed and Developed by the University of Maryland\'s</string>
    <string name="group_name">Mobile App Developers Club and SGA</string>
    <string name="give_feedback">We appreciate your feedback!</string>
    <string name="feedback_email">umdfinalsapp\@gmail.com</string>
    <string name="group_name_abbrv">M.A.D.</string>
    <string name="twitter_handle">\@MADterps</string>
    <string name="sga_twitter_handle">\@UMDSGA</string>
    <string name="facebook_title">UMCP Mobile App Developers</string>
    <string name="email">mobileappdevelopersclub\@gmail.com</string>
    <string name="web_url">mobileappdevelopersclub.com</string>
    <string name="google_plus">UMD Mobile App Developers</string>
    <string name="food_list_header"><i>*Click item to expand coupon, Coupons valid
         only during Finals Week, 12/16/2013 through 12/21/2013</i></string>
    <string name="twitter_header">Share your finals experience with the rest of campus:
         #umdfinalscountdown Follow \@UMDSGA on Twitter to check out the Finals Week
          question of the day!</string>
    <string name="gpa_string">GPA:</string>
    <string name="initial_gpa_value">0.00</string>
    <string name="calculate_string">Calculate!</string>
    <string name="calculator_credit_hint">Credits ( i.e. &quot;3&quot;)</string>
    <string name="calculator_grade_hint">Grade ( i.e. &quot;A+&quot;)</string>

</resources>