<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/dark_textured_background" >

    <TextView
        android:id="@+id/textView2" 
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/textView1"
        android:layout_alignBottom="@+id/textView1"
        android:layout_alignParentRight="true"
        android:layout_marginRight="41dp"
        android:text="@string/initial_gpa_value"
        android:textColor="#cc3333"
        android:textSize="40sp"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <EditText
        android:id="@+id/editText2"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/editText1"
        android:layout_below="@+id/editText1"
        android:layout_marginTop="10dp"
        android:layout_width="150dp"
        android:hint="@string/calculator_credit_hint"
        android:ems="10"
        android:inputType="number" >

    </EditText>

    <EditText
        android:id="@+id/editText3"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/editText2"
        android:layout_below="@+id/editText2"
        android:layout_marginTop="10dp"
        android:layout_width="150dp"
        android:hint="@string/calculator_credit_hint"
        android:ems="10"
        android:inputType="number" />

    <EditText
        android:id="@+id/editText5"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/editText4"
        android:layout_below="@+id/editText4"
        android:layout_marginTop="10dp"
        android:layout_width="150dp"
        android:hint="@string/calculator_credit_hint"
        android:ems="10"
        android:inputType="number" />

    <EditText
        android:id="@+id/editText6"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/editText5"
        android:layout_below="@+id/editText5"
        android:layout_marginTop="10dp"
        android:layout_width="150dp"
        android:hint="@string/calculator_credit_hint"
        android:ems="10"
        android:inputType="number" />

    <EditText
        android:id="@+id/editText7"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/editText6"
        android:layout_below="@+id/editText6"
        android:layout_marginTop="10dp"
        android:layout_width="150dp"
        android:hint="@string/calculator_credit_hint"
        android:ems="10"
        android:inputType="number" />

    <EditText
        android:id="@+id/editText9"
        android:layout_width="160dp"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/editText2"
        android:layout_alignBottom="@+id/editText2"
        android:layout_alignRight="@+id/editText8"
        android:hint="@string/calculator_grade_hint"
        android:ems="10"
        android:inputType="text" />

    <EditText
        android:id="@+id/editText10"
        android:layout_width="160dp"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/editText3"
        android:layout_alignRight="@+id/editText9"
        android:hint="@string/calculator_grade_hint"
        android:ems="10"
        android:inputType="text" />

    <EditText
        android:id="@+id/editText11"
        android:layout_width="160dp"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/editText4"
        android:layout_alignBottom="@+id/editText4"
        android:layout_alignRight="@+id/editText10"
        android:hint="@string/calculator_grade_hint"
        android:ems="10"
        android:inputType="text" />

    <EditText
        android:id="@+id/editText12"
        android:layout_width="160dp"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/editText5"
        android:layout_alignBottom="@+id/editText5"
        android:layout_alignRight="@+id/editText11"
        android:hint="@string/calculator_grade_hint"
        android:ems="10"
        android:inputType="text" />

    <EditText
        android:id="@+id/editText13"
        android:layout_width="160dp"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/editText6"
        android:layout_alignBottom="@+id/editText6"
        android:layout_alignRight="@+id/editText12"
        android:hint="@string/calculator_grade_hint"
        android:ems="10"
        android:inputType="text" />

    <EditText
        android:id="@+id/editText14"
        android:layout_width="160dp"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/editText7"
        android:layout_alignBottom="@+id/editText7"
        android:layout_alignRight="@+id/editText13"
        android:hint="@string/calculator_grade_hint"
        android:ems="10"
        android:inputType="text" />

    <Button
        android:id="@+id/btnCalc"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/editText7"
        android:layout_centerHorizontal="true"
        android:textColor="#ffcb05"
        android:text="@string/calculate_string" />

    <EditText
        android:id="@+id/editText1"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/textView1"
        android:ems="10"
        android:hint="@string/calculator_credit_hint"
        android:inputType="number"
        android:maxLength="2" >

        <requestFocus />
    </EditText>

    <EditText
        android:id="@+id/editText8"
        android:layout_width="160dp"
        android:layout_height="wrap_content"
        android:layout_above="@+id/editText2"
        android:layout_alignParentRight="true"
        android:ems="10"
        android:hint="@string/calculator_grade_hint"
        android:inputType="text" />

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_marginTop="14dp"
        android:layout_toLeftOf="@+id/btnCalc"
        android:text="@string/gpa_string"
        android:textColor="#cc3333"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textSize="40sp" />

    <EditText
        android:id="@+id/editText4"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/editText3"
        android:layout_marginTop="10dp"
        android:ems="10"
        android:hint="@string/calculator_credit_hint"
        android:inputType="number" />

</RelativeLayout>
